--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <header>
         <h1>
             <a href="/">
-                ROBERT SMITH'S CYBER BLOG
+                AKIEL REECE'S CYBER BLOG
             </a>
         </h1>
-        <a href="mailto:aaggarwal@2u.com" class="button">Send Email</a>
-        <a href="https://www.linkedin.com/" class="linkedin"><img
+        <a href="akielrc@gmail.com" class="button">Send Email</a>
+        <a href="https://www.linkedin.com/in/akielreece/" class="linkedin"><img
                 src="assets/images/LinkedIn-logo.png" alt="LinkedIn logo"
                 height="45px" />
         </a>
@@ -31,7 +31,7 @@
 
         <img src="assets/images/RobertSmith-profile.jpg"
             alt="Robert Smith picture" height=375px;>
-        <h2 class="section-title">Hi, I'm Robert!</h2>
+        <h2 class="section-title">Hi, I'm Akiel!</h2>
         <p>
             This is a little introductory paragraph. You can talk about yourself, your motivation for starting the blog,
             or what users can expect from your content! Edit this space as you see fit. Get creative!
