--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@
         <!--Replace with your own image-->
 
 
-        <img src="assets/images/RobertSmith-profile.jpg"
+        <img src="https://shorturl.at/J2UQZ"
             alt="Robert Smith picture" height=375px;>
         <h2 class="section-title">Hi, I'm Akiel!</h2>
         <p>
-            This is a little introductory paragraph. You can talk about yourself, your motivation for starting the blog,
-            or what users can expect from your content! Edit this space as you see fit. Get creative!
+            From making pizzas to protecting your data, I've embranced my passion for information technology and
+            pursued a career in cybersecurity.
             <br><br>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore magna aliqua. Ut enim ad minim veniam.
+            Excited by the challenge of safeguarding digital environments, I'm eager to combine my diverse 
+            background with the technnical skills I've developed to make a meaningful impact in the field!
         </p>
     </section>
 
