--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 
 
     <!-- "Blog Posts" section -->
+    <!--
     <section id="blog-post-collection" class="blog-posts">
         <h2 class="section-title">Blog Posts</h2>
         <article class="blog-post">
@@ -60,7 +61,7 @@
 
 
         <!-- second blog post -->
-        <article class="blog-post">
+<!--        <article class="blog-post">
             <img src="assets/images/Image2.jpg" alt="Image-2">
             <div class="blog">
                 <h3>Blog Post 2 Title</h3>
