--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 
         <!-- second blog post -->
-        <article class="blog-post">
+     <!--   <article class="blog-post">
             <img src="assets/images/Image2.jpg" alt="Image-2">
             <div class="blog">
                 <h3>Blog Post 2 Title</h3>
